# 2024_Autumn_Compiler

./: .gitignore  README.md  build.sh  submit.sh
docs/: LLVM.md  优化文章.md  总结感想.md  技术问题.md  编译器设计文档.md
include/: ast.h  error.h  lexer.h  multi_line_comment_fsm.h  parser.h  symboltable.h  token.h  visitor.h
include/frontend/: expinfo.h  parser.h  symboltable.h  token.h  visitor.h
include/llvm/: instr.h  ir_printable.h  type.h  utils.h  value.h
include/mips/: mips.h  mips_data.h  mips_generate.h  mips_instr.h  mips_manager.h  mips_optimize.h  (+3 more)
llvm-test/: main.c  main.ll  out.ll
mips-test/: test.asm
scripts/: build.sh  error.txt  submit.sh
src/: ast.cpp  error.cpp  lexer.cpp  main.cpp  parser.cpp  print.cpp  symboltable.cpp  token.cpp  type.cpp  visitor.cpp
submit/: CMakeLists.txt  CMakeLists.txts  ast.h  config.json  error.h  expinfo.h  explanation.txt  main.cpp  parser.cpp  print.cpp  symboltable.cpp  symboltable.h  token.cpp  token.h  visitor.cpp  visitor.h
submit/include/frontend/: expinfo.h  log.h
submit/include/llvm/: instr.h  utils.h  value.h
submit/include/mips/: mips_generate.h  mips_instr.h  mips_manager.h  mips_reg.h  mips_utils.h  register_allocator.h
submit/src/: main.cpp
submit/src/frontend/: error.cpp  parser.cpp  visitor.cpp
submit/src/llvm/: instr.cpp  utils.cpp  value.cpp
submit/src/mips/: mips_generate.cpp  mips_generate_mult_div.cpp  mips_generate_optimized.cpp  mips_print.cpp
testfile7-submit/: testfile7_22373362_杜启嵘_优化前中间代码.txt  testfile7_22373362_杜启嵘_优化前目标代码.txt  testfile7_22373362_杜启嵘_优化后目标代码.txt
tests/: submit.sh
(+32 files in other folders)
